Added ABH Norvina Vol 1 for current analysis

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <script src="node_modules/nouislider/distribute/nouislider.min.js"></script>
   </head>
   <body>
-  <img src="https://preview.redd.it/oi2ysnqn11h51.jpg?width=960&crop=smart&auto=webp&s=0c8506090fd5dfe0a357846da464c767b99d5668">
+  <!-- jeff.orgy -->
+  <!-- <img src="https://preview.redd.it/oi2ysnqn11h51.jpg?width=960&crop=smart&auto=webp&s=0c8506090fd5dfe0a357846da464c767b99d5668"> -->
+  <!-- abh.norvina1 -->
+  <img src="https://images.ulta.com/is/image/Ulta/2554348?op_sharpen=1&resMode=bilin&qlt=85&wid=800&hei=800&fmt=jpg">
   <h1>Original</h1>
   <div id="palette"></div>
   <h1>Sorted by Hue</h1>
@@ -32,5 +35,5 @@
   <div id="slider"></div>
   <div id="palette_reduced"></div>
   </body>
-  <script src="bundle.js"></script>
+  <script src="abh.norvina1.bundle.js"></script>
 </html>
